Titel in "...Kampfrechner" geändert.

--- a/lakcalc/index.html
+++ b/lakcalc/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lords and Knights-Rechner</title>
+		<title>Lords and Knights-Kampfrechner</title>
 
 		<meta charset="ISO8859-1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
