Added link to GITHUB.

--- a/lakcalc/index.html
+++ b/lakcalc/index.html
@@ -135,6 +135,10 @@
 					<tr><td>Axtreiter:</td>              <td>{{x.defAxtreiter}}</td>              <td>{{x.offAxtreiter}}</td>              </tr>
 				</table>
 			</div>
+
+			<div class="small" style="margin-top: 10px; text-align: center;">
+				Want to report bugs, contribute, or just pat someone's back? Visit us on <a href="https://github.com/JannisUnkrig/lakcalc">Github</a>.
+			</div>
 		</div>
 	</body>
 </html>
