--- a/lakcalc/index.html
+++ b/lakcalc/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lords and Knights-Krampfrechner</title>
+		<title>Lords and Knights-Kampfrechner</title>
 
 		<meta charset="ISO8859-1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
 	<body>
 		<div ng-app="myApp" ng-controller="myCtrl" style="max-width:400px;" class="container">
 
-			<div class="page-header"><h4>Lords and Knights-Rechner</h4></div>
+			<div class="page-header"><h4>Lords and Knights-Kampfrechner</h4></div>
 			<div class="row"> 
     			<div class="col-xs-6">Startzeit:</div>
 				<div class="col-xs-6"><div uib-timepicker ng-model="snapshot0.uhrzeit" show-meridian="false"></div></div>
