Added "target=_top" to the GITHUB link, for otherwise the browser window goes white. (Obviously GITHUB doesn't like being loaded into a frame!?)

--- a/lakcalc/index.html
+++ b/lakcalc/index.html
@@ -137,7 +137,7 @@
 			</div>
 
 			<div class="small" style="margin-top: 10px; text-align: center;">
-				Want to report bugs, contribute, or just pat someone's back? Visit us on <a href="https://github.com/JannisUnkrig/lakcalc">Github</a>.
+				Want to report bugs, contribute, or just pat someone's back? Visit us on <a href="https://github.com/JannisUnkrig/lakcalc" target="_top">Github</a>.
 			</div>
 		</div>
 	</body>
