--- a/lakcalc/index.html
+++ b/lakcalc/index.html
@@ -32,7 +32,7 @@
 				<button type="button" ng-click="langDe()" class="btn btn-sm btn-secondary" style="background-color: #eee"><img src="de_flag.png" /></button>
 			</div>
 
-			<div class="page-header"><h4>{{ i18n.title }}</h4></div>
+			<div class="page-header"><h4><span ng-bind-html="i18n.title"></span></h4></div>
 			<div class="row"> 
     			<div class="col-xs-6">{{ i18n.arrivalTime}}:</div>
 				<div class="col-xs-6"><div uib-timepicker ng-model="snapshot0.uhrzeit" show-meridian="false"></div></div>
